staking: chrome mobile wrap issue

--- a/src/scss/components/delegate/delegate.component.scss
+++ b/src/scss/components/delegate/delegate.component.scss
@@ -334,13 +334,15 @@
 
       & .props {
         flex-wrap: wrap;
-        height: 8rem;
-        width: calc(100% - 0rem);
+        height: 9rem;
+        width: 100%;
         justify-content: center;
-        align-content: start;
+        align-content: flex-start;
 
         & .logo {
           width: 7rem;
+          height: 7rem;
+          padding: 1rem 0;
           margin: 0 2rem 0 1rem;
         }
 
